--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,36 @@ article .bottom {
     outline: 1px solid #6c7589;
     color: #FFF;
 }
+.alert {
+    position: fixed;
+    z-index: 1;
+    padding-top: 150px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+.alert-content {
+    background-color: #FFF;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%;
+}
+.close {
+    color: #000;
+    float:right;
+    font-size: 28px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: #000;
+    cursor: pointer;
+}
 #bike-checked {
     display: none;
     color: #FFF;
