--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,8 @@ article .bottom {
     outline: 1px solid #6c7589;
     color: #FFF;
 }
-.alert {
+.alerting {
+    display: none;
     position: fixed;
     z-index: 1;
     padding-top: 150px;
