--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 ul {
     list-style: none;
     padding: 0;
+    padding-top: 15px;
 }
 a {
     text-decoration: none;
@@ -29,13 +30,13 @@ main .banner {
     background-color: #6c7589;
 }
 .banner article {
-    margin: 0 20px;
+    margin: 0 10px;
     background-color: #FFF;
 }
 .banner article img {
     width: 100%;
     max-width: 250px;
-    padding-top: 30px;
+    padding-top: 5px;
 }
 .banner article h1 {
     font-family: 'Monofett', cursive;
@@ -60,15 +61,11 @@ article .bottom {
 }
 .buttons button {
     width: 100%;
-    padding: 10px 0;
-    margin: 10px auto;
+    padding: 5px 0;
+    margin: 5px auto;
     max-width: 200px;
     font-size: 1.3em;
     font-family:'Play', sans-serif;
-}
-
-button:not([disabled]) {
-    transition: all .3s ease 0s;
 }
 .buttons button:not([disabled]):focus,
 .buttons button:not([disabled]):hover {
@@ -80,7 +77,7 @@ button:not([disabled]) {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 150px;
+    padding-top: 2%;
     left: 0;
     top: 0;
     width: 100%;
@@ -114,10 +111,10 @@ button:not([disabled]) {
    .alert-content {
       width: 80%;
       position: absolute;
-      top: 0;
+      top: 1%;
       left: 10%;
       padding-top: 0px;
-      
+      padding-bottom: 0px;
    }
    .buttons li > button {
       padding: 0;
