--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@
 /*====== [GLOBAL SELECTORS] =======*/
 ul {
     list-style: none;
+    padding: 0;
+    padding-top: 15px;
 }
 a {
     text-decoration: none;
@@ -28,13 +30,13 @@ main .banner {
     background-color: #6c7589;
 }
 .banner article {
-    margin: 0 20px;
+    margin: 0 10px;
     background-color: #FFF;
 }
 .banner article img {
     width: 100%;
     max-width: 250px;
-    padding-top: 30px;
+    padding-top: 5px;
 }
 .banner article h1 {
     font-family: 'Monofett', cursive;
@@ -59,16 +61,14 @@ article .bottom {
 }
 .buttons button {
     width: 100%;
-    padding: 10px 0;
-    margin: 10px auto;
+    padding: 5px 0;
+    margin: 5px auto;
     max-width: 200px;
-    cursor: pointer;
-    transition: all .3s ease 0s;
     font-size: 1.3em;
     font-family:'Play', sans-serif;
 }
-.buttons button:focus,
-.buttons button:hover {
+.buttons button:not([disabled]):focus,
+.buttons button:not([disabled]):hover {
     background-color: #6c7589; 
     outline: 1px solid #6c7589;
     color: #FFF;
@@ -77,7 +77,7 @@ article .bottom {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 150px;
+    padding-top: 2%;
     left: 0;
     top: 0;
     width: 100%;
@@ -92,6 +92,13 @@ article .bottom {
     padding: 20px;
     border: 1px solid #888;
     width: 30%;
+}
+.alert-content li > button {
+    color: #45d363;
+}
+.alert-content [disabled] {
+    background-color: #6c7589;
+    color: #ea504e;
 }
 .close {
     color: #000;
@@ -108,4 +115,17 @@ article .bottom {
   .banner article h1 {
     font-size: 2em;
    }
+   .alert-content {
+      width: 80%;
+      position: absolute;
+      top: 1%;
+      left: 10%;
+      padding-top: 0px;
+      padding-bottom: 0px;
+   }
+   .buttons li > button {
+      padding: 0;
+      margin: 2px 0;
+   }
+
 }
