--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 ul {
     list-style: none;
     padding: 0;
-    padding-top: 15px;
+    padding-top: 20px;
 }
 a {
     text-decoration: none;
@@ -68,12 +68,6 @@ article .bottom {
     font-size: 1.3em;
     font-family:'Play', sans-serif;
 }
-.buttons button:not([disabled]):focus,
-.buttons button:not([disabled]):hover {
-    background-color: #6c7589; 
-    outline: 1px solid #6c7589;
-    color: #FFF;
-}
 .alerting {
     display: none;
     position: fixed;
@@ -84,7 +78,6 @@ article .bottom {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
 .alert-content {
@@ -94,12 +87,9 @@ article .bottom {
     border: 1px solid #888;
     width: 30%;
 }
-.alert-content li > button {
-    color: #45d363;
-}
 .alert-content [disabled] {
     background-color: #6c7589;
-    color: #ea504e;
+    color: #fff;
 }
 .close {
     color: #000;
