--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,11 @@ article .bottom {
     font-size: 1.3em;
     font-family:'Play', sans-serif;
 }
+.buttons button:not([disabled]):active {
+    background-color: #6c7589; 
+    outline: 1px solid #6c7589;
+    color: #FFF;
+}
 .alerting {
     display: none;
     position: fixed;
